--- a/src/component/dashboard.css
+++ b/src/component/dashboard.css
@@ -18,6 +18,7 @@
     padding: 0;
     box-sizing: 0;
     font-family: var(--font-style);
+    cursor: pointer;
 }
 body{
   width: 100%;
@@ -63,8 +64,5 @@ body{
     gap: 10px;
 }
 .sidebars:hover{
-    color: #fccc65;
-}
-.logout-container{
-    
+    color: #fccc66;
 }
