--- a/src/component/dashboard.css
+++ b/src/component/dashboard.css
@@ -31,14 +31,7 @@ body{
     justify-content: center;
     gap: 5px;
 }
-.logo{
-    width:50px;
-    height:50px;
-}
-#title-text{
-    font-weight: 700;
-    color: var(--text-100);
-}
+
 .menu-container{
     padding: 7px;
 }
@@ -56,8 +49,7 @@ body{
     text-decoration: none;
     font-family: var(--font-style);
     font-weight: 400;
-    font-size: 1.4rem;
-    color: var(--text-100);
+    font-size: 1rem;
     text-wrap: nowrap;
     display:flex;
     flex-direction: row;
@@ -65,4 +57,9 @@ body{
 }
 .sidebars:hover{
     color: #fccc66;
+}
+#card-1{
+    box-shadow: 6px 6px 10px 2px rgba(105,105,105,0.75);
+    -webkit-box-shadow: 6px 6px 10px 2px rgba(105,105,105,0.75);
+    -moz-box-shadow: 6px 6px 10px 2px rgba(105,105,105,0.75);
 }
