--- a/src/component/dashboard.html
+++ b/src/component/dashboard.html
@@ -140,8 +140,8 @@
         <div id="nav-items" class = "d-lg-none d-sm-none d-md-none d-xl-block">
           <ul class = "nav-list">
             <li>
-              <button id = "notif" class ="btn py-1 px-2">
-              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+              <button id = "notif" type ="button" class ="btn py-1 px-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
   <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6"/>
 </svg>
               </button>
@@ -157,7 +157,7 @@
             </li>
             <li>
                <button id = "setting" class ="btn py-1 px-2">
-               <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
+               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
   <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"/>
   <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z"/>
 </svg>
@@ -174,7 +174,7 @@
             </li>
             <li>
                <button id = "darkmode" class ="btn py-1 px-2">
-              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-moon" viewBox="0 0 16 16">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-moon" viewBox="0 0 16 16">
                 <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278M4.858 1.311A7.27 7.27 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.32 7.32 0 0 0 5.205-2.162q-.506.063-1.029.063c-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286"/>
               </svg>
               </button>
@@ -203,17 +203,18 @@
             <div class = "container-fluid">
 
                 <ul class = "menu-list">
-                    <li id = "maindashboard" class = "menu-items">
-                      <a  href = "./dashboard.html" class = "nav-link link-primary">
+                    <li id= "maindashboard" class = "menu-items">
+                      <a href = "dashboard.html" class = "nav-link ">
                       <h5 id = "nav-text" class = " font-bold py-1 px-1 d-flex align-items-center justify-content-start gap-1 m-0">
-                      <i class="bi bi-columns-gap"></i>Dashboard</h5></a>
+                      <i class="bi bi-columns-gap"></i>Dashboard</h5>
+                      </a>
                     </li>
                     <li id = "studentsection" class = "menu-items">
-                    <a href = "./studentsec.html" class = "nav-link link-primary">
+    
                     <h5 id = "nav-text" class = " font-medium py-1 px-2 d-flex align-items-center gap-1 m-0">
-                    <i class="bi bi-people"></i>Student</h5></a>
+                    <i class="bi bi-people"></i>Student</h5>
                     </li>
-                    <li class = "menu-items">
+                    <li id = "teachersection" class = "menu-items">
                     <h5 id = "nav-text" class = " font-medium py-1 px-2 d-flex align-items-center gap-1 m-0">
                     <i class="bi bi-people"></i>Teacher</h5>
                     </li>
@@ -243,10 +244,10 @@
 
               <div class = "row gap-2 d-flex flex-md-wrap flex-xl-nowrap justify-content-center px-4 py-2 pb-2 m-0">
                 <div class="col-xl-3">
-                  <div class = "card border-0 shadow bg-primary">
+                  <div class = "card bg-primary shadow">
                     <div class = "card-body d-flex flex-row justify-content-between align-items-center">
                       <div class = "text-white">
-                      <h5 class = "card-title font-light"style = "cursor:pointer;">Total Students</h5>
+                      <h5 class = "card-title font-light fs-5"style = "cursor:pointer;">Total Students</h5>
                       <h4 class = "card-text font-medium"style = "cursor: pointer;">50</h4>
                       </div>
                       <div class = "px-2">
@@ -260,7 +261,7 @@
                 <div class = "card border-0 shadow bg-danger" >
                     <div class = "card-body d-flex flex-row justify-content-between align-items-center">
                       <div class = "text-white">
-                      <h5 class = "card-title font-light"style = "cursor:pointer;">Total Teachers</h5>
+                      <h5 class = "card-title font-light fs-5"style = "cursor:pointer;">Total Teachers</h5>
                       <h4 class = "card-text font-medium"style = "cursor: pointer;">50</h4>
                       </div>
                       <div class = "px-2">
@@ -275,7 +276,7 @@
                   <div class = "card border-0 shadow bg-success" >
                     <div class = "card-body d-flex flex-row justify-content-between align-items-center">
                       <div class = "text-white">
-                      <h5 class = "card-title font-light"style = "cursor:pointer;">Total Courses</h5>
+                      <h5 class = "card-title font-light fs-5"style = "cursor:pointer;">Total Courses</h5>
                       <h4 class = "card-text font-medium"style = "cursor: pointer;">50</h4>
                       </div>
                       <div class = "px-2">
@@ -289,7 +290,7 @@
                 <div class = "card border-0 shadow bg-dark">
                     <div class = "card-body d-flex flex-row justify-content-between align-items-center">
                       <div class = "text-white">
-                      <h5 class = "card-title font-light"style = "cursor:pointer;">Total Events</h5>
+                      <h5 class = "card-title font-light fs-5"style = "cursor:pointer;">Total Events</h5>
                       <h4 class = "card-text font-medium"style = "cursor: pointer;">50</h4>
                       </div>
                       <div class = "px-2">
@@ -300,7 +301,7 @@
                   </div>
                 </div>
               </div>
-              <div class = "row gap-2 d-flex flex-md-wrap flex-xl-nowrap justify-content-between px-4 py-2 m-0">
+              <div class = "row gap-2 d-flex flex-md-wrap flex-xl-nowrap justify-content-between px-4 py-2 pt-3 m-0">
                 <div class = "col-xl-6">
                   <div class= "card shadow-sm border-1">
                     <div class = "card-header py-1 font-medium fs-4 bg-transparent">Student Attendance</div>
@@ -346,6 +347,7 @@
     </script>       
 
       <script type = "text/javascript" src = "./toggle-light.js"></script>
+      <script type = "text/javascript" src = "./admincomp/studentcontroll.js"></script>
       <script src = "./admin.js"></script>
     <script src = '../../node_modules/sweetalert2/dist/sweetalert2.min.js'></script>
     <script src= "../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
